RESOLVED FIXED268456
[WGSL] Functions should not be used as values
https://bugs.webkit.org/show_bug.cgi?id=268456
Summary [WGSL] Functions should not be used as values
Tadeu Zagallo
Reported 2024-01-31 07:08:04 PST
...
Attachments
Tadeu Zagallo
Comment 1 2024-01-31 07:08:12 PST
Tadeu Zagallo
Comment 2 2024-01-31 07:15:22 PST
EWS
Comment 3 2024-02-01 08:54:29 PST
Committed 273916@main (981e9e4ec221): <https://commits.webkit.org/273916@main> Reviewed commits have been landed. Closing PR #23580 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.