[WGSL] Functions should not be used as values https://bugs.webkit.org/show_bug.cgi?id=268456 rdar://121527098

Reviewed by Mike Wyrzykowski.

Add a separate binding type for functions, since they can only ever be used in
function calls, so we don't have to handle it everywhere.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::bindingKindToString):
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::bitcast):
(WGSL::TypeChecker::lookupType):
(WGSL::TypeChecker::introduceFunction):
* Source/WebGPU/WGSL/tests/invalid/bitcast.wgsl:

Canonical link: https://commits.webkit.org/273916@main