Source/WebGPU/WGSL/tests/invalid/bitcast.wgsl
@@ -29,6 +29,12 @@ fn testInvalidConversion()
 
 fn testI32Overflow()
 {
-    // value 4294967295 cannot be represented as 'i32'
+    // CHECK-L: value 4294967295 cannot be represented as 'i32'
     { const x: f32 = bitcast<f32>(4294967295); }
+}
+
+fn testFunctionAsValue()
+{
+    // CHECK-L: cannot use function 'testI32Overflow' as value
+    { const x: f32 = bitcast<f32>(testI32Overflow); }
 }
